# actix_graphql

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  profile.rs  user.rs
migration/src/: lib.rs  m20230415_212103_create_user_and_profile_tables.rs  table_enums.rs
src/: main.rs  schema.rs
src/db/: mod.rs
src/gql/: types.rs
